fix label alignment in number card for firefox

--- a/src/number-card/card.component.scss
+++ b/src/number-card/card.component.scss
@@ -17,7 +17,8 @@ ngx-charts-number-card {
       }
     }
 
-    .value-text {
+    .value-text,
+    .trimmed-label {
       pointer-events: none;
       dominant-baseline: hanging;
     }
